# voice-stt

./: .gitignore  config.py  flake.nix  main.py  pyproject.toml
