[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-api"
version = "0.1.0"
description = "FastAPI Faster-Whisper Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "faster-whisper",
    "pydantic",
    "pydantic-settings",
    "python-dotenv"
]

[project.scripts]
# This creates the 'whisper-api' command available in Nix
whisper-api = "main:main"

[tool.setuptools]
# Explicitly list modules because of the flat layout
py-modules = [
    "main",
    "config"
]
