[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-stt"
version = "0.1.0"
description = "FastAPI Faster-Whisper Server"
requires-python = ">=3.11"
dependencies = [
    "aiomqtt",
    "boto3",
    "faster-whisper",
    "pydantic",
    "pydantic-settings",
    "python-dotenv"
]

[project.scripts]
# This creates the 'whisper-api' command available in Nix
voice-stt = "main:main"

[tool.setuptools]
# Explicitly list modules because of the flat layout
py-modules = [
    "main",
    "config"
]
